--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Zain Ul Abad",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^24.0.10",
     "nodemon": "^3.1.10",
     "prettier": "^3.6.2"
   },
